[project]
name = "cursor-usage-opt-mcp"
version = "1.0.0"
description = "Simple MCP server for interactive user feedback in AI-assisted development tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pyside6>=6.8.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "markdown>=3.5.0",
    "pygments>=2.16.0",
    "requests>=2.31.0",
]
